add MesoPy scripts

--- a/downloads/download_mesowest.ipynb
+++ b/downloads/download_mesowest.ipynb
@@ -16,21 +16,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "69ab636f-7e90-4a35-9faa-0b9d3eb005a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QCHWC Chillkat FAA Web\n",
+      "CKTA2 Chillkat River Near\n",
+      "SPCA2 Sheep Camp\n",
+      "DWSA2 Dyea\n",
+      "TYAA2 Taiya River Near S\n"
+     ]
+    }
+   ],
    "source": [
-    "## TODO put this in a yml file and import from there\n",
+    "## Update these two to choose case and location\n",
+    "config_name = 'casedec2020' # dictionary name of case study\n",
+    "location = 'klukwan' # name of location - grabs all the stations around that area\n",
     "\n",
     "# import configuration file for station choice\n",
-    "config_name = 'casedec2020' # dictionary name\n",
     "yaml_doc = 'mesonet_config.yml'\n",
     "config = yaml.load(open(yaml_doc), Loader=yaml.SafeLoader)\n",
     "ddict = config[config_name]\n",
     "\n",
-    "stn_ids = []\n",
-    "\n",
+    "stn_ids = config['stationids'][location]\n",
+    "stn_name= config['stationids'][location + '_name']\n",
+    "for i, (ids, name) in enumerate(zip(stn_ids, stn_name)):\n",
+    "    print(ids, name)\n",
     "\n",
     "precip_varnames = ['precip_accum', 'precip_accum_one_minute', 'precip_accum_ten_minute',\n",
     "                   'precip_accum_fifteen_minute', 'precip_accum_30_minute', 'precip_accum_one_hour',\n",
@@ -39,80 +54,58 @@
     "                   'precip_accum_5_minute_manual', 'precip_accum_10_minute_manual', 'precip_accum_15_minute_manual', \n",
     "                   'precip_accum_3_hour_manual', 'precip_accum_6_hour_manual', 'precip_accum_24_hour_manual',\n",
     "                   'precip_interval', 'precip_accum_since_00utc', 'precip_accum_since_local_midnight', 'precip_accum_12_hour',\n",
-    "                   'precip_accum_five_minute', 'precip_accum_since_7_local']"
+    "                   'precip_accum_five_minute', 'precip_accum_since_7_local', 'precip_accum_set_1']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "d20e2129-163a-4c35-b206-4b9a60bda529",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'start': '202011280000',\n",
-       " 'end': '202012040000',\n",
-       " 'obtimezone': 'UTC',\n",
-       " 'stids': 'HAXA2',\n",
-       " 'token': '6f7bc78232734beab9da77235a2bd351',\n",
-       " 'stnids': 'PAHN'}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ddict['stids'] = 'HAXA2'\n",
-    "ddict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "93b4408c-8b90-4d0d-9753-93999d77b421",
+   "execution_count": 9,
+   "id": "8ed6b301-6b69-42a6-9bd5-a06023e8fd80",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://api.mesowest.net/v2/stations/timeseries?start=202011280000&end=202012040000&obtimezone=UTC&stids=HAXA2&token=6f7bc78232734beab9da77235a2bd351&stnids=PAHN\n"
+      "http://api.mesowest.net/v2/stations/timeseries?start=202011280000&end=202012040000&obtimezone=UTC&stids=QCHWC&token=6f7bc78232734beab9da77235a2bd351\n",
+      "http://api.mesowest.net/v2/stations/timeseries?start=202011280000&end=202012040000&obtimezone=UTC&stids=CKTA2&token=6f7bc78232734beab9da77235a2bd351\n",
+      "http://api.mesowest.net/v2/stations/timeseries?start=202011280000&end=202012040000&obtimezone=UTC&stids=SPCA2&token=6f7bc78232734beab9da77235a2bd351\n",
+      "SPCA2 Sheep Camp precip_accum_set_1\n",
+      "http://api.mesowest.net/v2/stations/timeseries?start=202011280000&end=202012040000&obtimezone=UTC&stids=DWSA2&token=6f7bc78232734beab9da77235a2bd351\n",
+      "DWSA2 Dyea precip_accum_set_1\n",
+      "http://api.mesowest.net/v2/stations/timeseries?start=202011280000&end=202012040000&obtimezone=UTC&stids=TYAA2&token=6f7bc78232734beab9da77235a2bd351\n",
+      "TYAA2 Taiya River Near S precip_accum_set_1\n"
      ]
     }
    ],
    "source": [
-    "## pull data\n",
-    "apiString = urllib.parse.urlencode(ddict)\n",
-    "url = \"http://api.mesowest.net/v2/stations/timeseries\"\n",
-    "fullUrl = '{}?{}'.format(url,apiString)\n",
-    "print(fullUrl)\n",
-    "response = urllib.request.urlopen(fullUrl)\n",
-    "responseDict = json.loads(response.read())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "8ed6b301-6b69-42a6-9bd5-a06023e8fd80",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['date_time', 'wind_cardinal_direction_set_1d', 'wind_gust_set_1', 'dew_point_temperature_set_1d', 'wind_chill_set_1d', 'sea_level_pressure_set_1', 'relative_humidity_set_1', 'wind_speed_set_1', 'air_temp_set_1', 'wind_direction_set_1'])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dictkeys = responseDict['STATION'][0]['OBSERVATIONS'].keys()\n",
-    "dictkeys"
+    "## Initial Query to determine available data\n",
+    "new_stn = []\n",
+    "new_stnname = []\n",
+    "new_varname = []\n",
+    "\n",
+    "for i, (ids, name) in enumerate(zip(stn_ids, stn_name)):\n",
+    "    ddict['stids'] = ids # put the current station id in the response dict\n",
+    "    \n",
+    "    ## pull data\n",
+    "    apiString = urllib.parse.urlencode(ddict)\n",
+    "    url = \"http://api.mesowest.net/v2/stations/timeseries\"\n",
+    "    fullUrl = '{}?{}'.format(url,apiString)\n",
+    "    print(fullUrl)\n",
+    "    response = urllib.request.urlopen(fullUrl)\n",
+    "    responseDict = json.loads(response.read())\n",
+    "    \n",
+    "    ## get the variable names of the current station\n",
+    "    dictkeys = responseDict['STATION'][0]['OBSERVATIONS'].keys()\n",
+    "    # print(dictkeys)\n",
+    "    for j, precip_varname in enumerate(precip_varnames):\n",
+    "        if precip_varname in dictkeys:\n",
+    "            print(ids, name, precip_varname)\n",
+    "            # if a precipitation variable is found in the given data\n",
+    "            # append that info to new lists \n",
+    "            new_stn.append(ids)\n",
+    "            new_stnname.append(name)\n",
+    "            new_varname.append(precip_varname)\n"
    ]
   },
   {
@@ -223,6 +216,16 @@
    "source": [
     "test = ksea.resample('1H')\n",
     "test.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "190dc2d7-1b2a-4cc6-8ab7-a82f4e96a311",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.values"
    ]
   },
   {
