ran Tier II: AR preciptiation focus, updated AR identification and clim

--- a/preprocess/SEAK-WRF_precipitation_tseries.ipynb
+++ b/preprocess/SEAK-WRF_precipitation_tseries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6b8b9efb-0fa1-4d7e-a30a-6c5adf81dd37",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1c10b252-fe7c-4f60-a6c4-340cf1d7ab0f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3a433fc7-c2ee-4270-8e64-126b201e5b67",
    "metadata": {},
    "outputs": [],
@@ -45,12 +45,12 @@
     "option = 'c'\n",
     "\n",
     "### choose which temporal resolution for the precipitation data (hourly or daily)\n",
-    "temporal_res = 'daily'"
+    "temporal_res = 'hourly'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ab3e3633-8749-4a8b-8e7e-8ec6d10b1a1b",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5c5e9ae2-2e5b-4bb6-ac5a-1cc9631f6077",
    "metadata": {},
    "outputs": [],
@@ -117,37 +117,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6802d823-a19f-4a2e-bca5-e82198bf29fb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/cw3e/mead/projects/cwp140/scratch/dnash/miniconda3/envs/SEAK-clim/lib/python3.10/site-packages/dask/array/reductions.py:640: RuntimeWarning: All-NaN slice encountered\n",
-      "  return np.nanmax(x_chunk, axis=axis, keepdims=keepdims)\n",
-      "/cw3e/mead/projects/cwp140/scratch/dnash/miniconda3/envs/SEAK-clim/lib/python3.10/site-packages/dask/array/reductions.py:640: RuntimeWarning: All-NaN slice encountered\n",
-      "  return np.nanmax(x_chunk, axis=axis, keepdims=keepdims)\n",
-      "/cw3e/mead/projects/cwp140/scratch/dnash/miniconda3/envs/SEAK-clim/lib/python3.10/site-packages/dask/array/reductions.py:640: RuntimeWarning: All-NaN slice encountered\n",
-      "  return np.nanmax(x_chunk, axis=axis, keepdims=keepdims)\n",
-      "/cw3e/mead/projects/cwp140/scratch/dnash/miniconda3/envs/SEAK-clim/lib/python3.10/site-packages/dask/array/reductions.py:640: RuntimeWarning: All-NaN slice encountered\n",
-      "  return np.nanmax(x_chunk, axis=axis, keepdims=keepdims)\n",
-      "/cw3e/mead/projects/cwp140/scratch/dnash/miniconda3/envs/SEAK-clim/lib/python3.10/site-packages/dask/array/reductions.py:640: RuntimeWarning: All-NaN slice encountered\n",
-      "  return np.nanmax(x_chunk, axis=axis, keepdims=keepdims)\n",
-      "/cw3e/mead/projects/cwp140/scratch/dnash/miniconda3/envs/SEAK-clim/lib/python3.10/site-packages/dask/array/reductions.py:640: RuntimeWarning: All-NaN slice encountered\n",
-      "  return np.nanmax(x_chunk, axis=axis, keepdims=keepdims)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 13min 14s, sys: 20min 10s, total: 33min 25s\n",
-      "Wall time: 14min 26s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "\n",
@@ -180,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "79c64455-2dd8-4b6b-83a6-15145e3e0b26",
    "metadata": {},
    "outputs": [],
@@ -193,176 +166,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1e8ba417-bf69-49ac-864d-5b675498c9dc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Hoonah</th>\n",
-       "      <th>Skagway</th>\n",
-       "      <th>Klukwan</th>\n",
-       "      <th>Yakutat</th>\n",
-       "      <th>Craig</th>\n",
-       "      <th>Kasaan</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1980-01-01</th>\n",
-       "      <td>13.224121</td>\n",
-       "      <td>0.121262</td>\n",
-       "      <td>0.294556</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8.472046</td>\n",
-       "      <td>3.441467</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-01-02</th>\n",
-       "      <td>40.199463</td>\n",
-       "      <td>1.758621</td>\n",
-       "      <td>0.748291</td>\n",
-       "      <td>10.254639</td>\n",
-       "      <td>8.786377</td>\n",
-       "      <td>7.089172</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-01-03</th>\n",
-       "      <td>15.019043</td>\n",
-       "      <td>0.206024</td>\n",
-       "      <td>0.096436</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.603210</td>\n",
-       "      <td>1.977295</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-01-04</th>\n",
-       "      <td>0.226685</td>\n",
-       "      <td>0.436600</td>\n",
-       "      <td>0.010681</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.893433</td>\n",
-       "      <td>0.155701</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-01-05</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.149902</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-27</th>\n",
-       "      <td>44.343750</td>\n",
-       "      <td>0.664062</td>\n",
-       "      <td>4.671875</td>\n",
-       "      <td>6.046875</td>\n",
-       "      <td>42.859375</td>\n",
-       "      <td>16.539062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-28</th>\n",
-       "      <td>14.546875</td>\n",
-       "      <td>3.591797</td>\n",
-       "      <td>13.828125</td>\n",
-       "      <td>95.437500</td>\n",
-       "      <td>5.414062</td>\n",
-       "      <td>16.906250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-29</th>\n",
-       "      <td>2.593750</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>25.335938</td>\n",
-       "      <td>27.789062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-30</th>\n",
-       "      <td>0.359375</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.687500</td>\n",
-       "      <td>3.578125</td>\n",
-       "      <td>2.726562</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-31</th>\n",
-       "      <td>53.203125</td>\n",
-       "      <td>7.841797</td>\n",
-       "      <td>21.554688</td>\n",
-       "      <td>73.718750</td>\n",
-       "      <td>25.218750</td>\n",
-       "      <td>21.578125</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>14245 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Hoonah   Skagway    Klukwan    Yakutat      Craig     Kasaan\n",
-       "time                                                                       \n",
-       "1980-01-01  13.224121  0.121262   0.294556   0.000000   8.472046   3.441467\n",
-       "1980-01-02  40.199463  1.758621   0.748291  10.254639   8.786377   7.089172\n",
-       "1980-01-03  15.019043  0.206024   0.096436   0.000000   2.603210   1.977295\n",
-       "1980-01-04   0.226685  0.436600   0.010681   0.000000   0.893433   0.155701\n",
-       "1980-01-05   0.000000  0.000000   0.000000   1.149902   0.000000   0.000000\n",
-       "...               ...       ...        ...        ...        ...        ...\n",
-       "2018-12-27  44.343750  0.664062   4.671875   6.046875  42.859375  16.539062\n",
-       "2018-12-28  14.546875  3.591797  13.828125  95.437500   5.414062  16.906250\n",
-       "2018-12-29   2.593750  0.000000   0.000000   0.000000  25.335938  27.789062\n",
-       "2018-12-30   0.359375  0.000000   0.000000   0.687500   3.578125   2.726562\n",
-       "2018-12-31  53.203125  7.841797  21.554688  73.718750  25.218750  21.578125\n",
-       "\n",
-       "[14245 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## merge all dfs to one\n",
     "df_merged = reduce(lambda x, y: pd.merge(x, y, on = 'time'), df_lst2)\n",
@@ -375,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "08b9d7c5-dddd-4526-b076-72c4ab5570ec",
    "metadata": {},
    "outputs": [],
