--- a/preprocess/SEAK-WRF_precipitation_tseries.ipynb
+++ b/preprocess/SEAK-WRF_precipitation_tseries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6b8b9efb-0fa1-4d7e-a30a-6c5adf81dd37",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1c10b252-fe7c-4f60-a6c4-340cf1d7ab0f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3a433fc7-c2ee-4270-8e64-126b201e5b67",
    "metadata": {},
    "outputs": [],
@@ -42,15 +42,15 @@
     "# (a) select the grid cell closest to each of the communities\n",
     "# (b) select the 9 closest grid cells to each of the communities - take maximum value\n",
     "# (c) select the 25 closest grid cells to each of the communities- take maximum value\n",
-    "option = 'c'\n",
+    "option = 'a'\n",
     "\n",
     "### choose which temporal resolution for the precipitation data (hourly or daily)\n",
-    "temporal_res = 'hourly'"
+    "temporal_res = 'daily'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ab3e3633-8749-4a8b-8e7e-8ec6d10b1a1b",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5c5e9ae2-2e5b-4bb6-ac5a-1cc9631f6077",
    "metadata": {},
    "outputs": [],
@@ -117,10 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6802d823-a19f-4a2e-bca5-e82198bf29fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 14min 14s, sys: 42min 3s, total: 56min 18s\n",
+      "Wall time: 31min 32s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -153,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "79c64455-2dd8-4b6b-83a6-15145e3e0b26",
    "metadata": {},
    "outputs": [],
@@ -166,10 +175,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1e8ba417-bf69-49ac-864d-5b675498c9dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_11206/2317259339.py:2: FutureWarning: Passing 'suffixes' which cause duplicate columns {'lon_x', 'lat_x'} in the result is deprecated and will raise a MergeError in a future version.\n",
+      "  df_merged = reduce(lambda x, y: pd.merge(x, y, on = 'time'), df_lst2)\n",
+      "/tmp/ipykernel_11206/2317259339.py:2: FutureWarning: Passing 'suffixes' which cause duplicate columns {'lon_x', 'lat_x'} in the result is deprecated and will raise a MergeError in a future version.\n",
+      "  df_merged = reduce(lambda x, y: pd.merge(x, y, on = 'time'), df_lst2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hoonah</th>\n",
+       "      <th>Skagway</th>\n",
+       "      <th>Klukwan</th>\n",
+       "      <th>Yakutat</th>\n",
+       "      <th>Craig</th>\n",
+       "      <th>Kasaan</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1980-01-01</th>\n",
+       "      <td>7.655640</td>\n",
+       "      <td>0.076904</td>\n",
+       "      <td>0.204346</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.781860</td>\n",
+       "      <td>1.809143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-01-02</th>\n",
+       "      <td>29.412842</td>\n",
+       "      <td>1.299072</td>\n",
+       "      <td>0.494904</td>\n",
+       "      <td>5.281372</td>\n",
+       "      <td>5.020081</td>\n",
+       "      <td>4.159241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-01-03</th>\n",
+       "      <td>7.745972</td>\n",
+       "      <td>0.138596</td>\n",
+       "      <td>0.077911</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.870911</td>\n",
+       "      <td>1.140930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-01-04</th>\n",
+       "      <td>0.078857</td>\n",
+       "      <td>0.313400</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.202881</td>\n",
+       "      <td>0.033142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-01-05</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.658325</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-27</th>\n",
+       "      <td>2.875000</td>\n",
+       "      <td>3.273438</td>\n",
+       "      <td>14.242188</td>\n",
+       "      <td>24.281250</td>\n",
+       "      <td>2.414062</td>\n",
+       "      <td>3.140625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-28</th>\n",
+       "      <td>40.273438</td>\n",
+       "      <td>10.777344</td>\n",
+       "      <td>23.679688</td>\n",
+       "      <td>47.187500</td>\n",
+       "      <td>42.125000</td>\n",
+       "      <td>65.742188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-29</th>\n",
+       "      <td>7.265625</td>\n",
+       "      <td>2.371094</td>\n",
+       "      <td>11.242188</td>\n",
+       "      <td>33.281250</td>\n",
+       "      <td>3.562500</td>\n",
+       "      <td>9.632812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-30</th>\n",
+       "      <td>44.453125</td>\n",
+       "      <td>5.171875</td>\n",
+       "      <td>19.691406</td>\n",
+       "      <td>45.390625</td>\n",
+       "      <td>17.234375</td>\n",
+       "      <td>47.273438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>10.937500</td>\n",
+       "      <td>2.056641</td>\n",
+       "      <td>2.726562</td>\n",
+       "      <td>28.750000</td>\n",
+       "      <td>5.085938</td>\n",
+       "      <td>21.210938</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14610 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Hoonah    Skagway    Klukwan    Yakutat      Craig     Kasaan\n",
+       "time                                                                        \n",
+       "1980-01-01   7.655640   0.076904   0.204346   0.000000   6.781860   1.809143\n",
+       "1980-01-02  29.412842   1.299072   0.494904   5.281372   5.020081   4.159241\n",
+       "1980-01-03   7.745972   0.138596   0.077911   0.000000   0.870911   1.140930\n",
+       "1980-01-04   0.078857   0.313400   0.000000   0.000000   0.202881   0.033142\n",
+       "1980-01-05   0.000000   0.000000   0.000000   0.658325   0.000000   0.000000\n",
+       "...               ...        ...        ...        ...        ...        ...\n",
+       "2019-12-27   2.875000   3.273438  14.242188  24.281250   2.414062   3.140625\n",
+       "2019-12-28  40.273438  10.777344  23.679688  47.187500  42.125000  65.742188\n",
+       "2019-12-29   7.265625   2.371094  11.242188  33.281250   3.562500   9.632812\n",
+       "2019-12-30  44.453125   5.171875  19.691406  45.390625  17.234375  47.273438\n",
+       "2019-12-31  10.937500   2.056641   2.726562  28.750000   5.085938  21.210938\n",
+       "\n",
+       "[14610 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## merge all dfs to one\n",
     "df_merged = reduce(lambda x, y: pd.merge(x, y, on = 'time'), df_lst2)\n",
@@ -182,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "08b9d7c5-dddd-4526-b076-72c4ab5570ec",
    "metadata": {},
    "outputs": [],
