add script for Jan 2023 CA deep dive

--- a/analysis/SEAK-WRF-projection-test.ipynb
+++ b/analysis/SEAK-WRF-projection-test.ipynb
@@ -397,7 +397,7 @@
     "mapcrs = ccrs.Mercator()\n",
     "# Define the data projection\n",
     "globe = ccrs.Globe(ellipse='sphere', semimajor_axis=6370000, semiminor_axis=6370000)\n",
-    "# mapcrs = ccrs.LambertConformal(globe=globe, central_longitude=-138.5, central_latitude=58.0, standard_parallels=(30., 60.))\n",
+    "mapcrs = ccrs.LambertConformal(globe=globe, central_longitude=-138.5, central_latitude=58.0, standard_parallels=(58., 58.))\n",
     "datacrs = ccrs.PlateCarree()\n",
     "mapcrs = ccrs.PlateCarree()\n",
     "\n",
