--- a/analysis/Haines_2020_case_study.ipynb
+++ b/analysis/Haines_2020_case_study.ipynb
@@ -14,6 +14,7 @@
     "import pandas as pd\n",
     "import xarray as xr\n",
     "import textwrap\n",
+    "import datetime as dt\n",
     "\n",
     "# import geopandas as gpd\n",
     "\n",
@@ -1230,9 +1231,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (pyclivac)",
+   "display_name": "Python (SEAK-clim)",
    "language": "python",
-   "name": "pyclivac"
+   "name": "seak-clim"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1244,7 +1245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
