write function for preprocessing dataframes

--- a/analysis/precip_composites.ipynb
+++ b/analysis/precip_composites.ipynb
@@ -37,8 +37,8 @@
     "from metpy.units import units\n",
     "\n",
     "# import personal modules\n",
-    "# Path to modules\n",
-    "sys.path.append('../modules')\n",
+    "sys.path.append('../modules') # Path to modules\n",
+    "from preprocess_dataframes import combine_ivt_ar_prec_df\n",
     "import nclcmaps as nclc\n",
     "from plotter import draw_basemap\n",
     "\n",
@@ -357,58 +357,8 @@
     "temporal_res = 'daily'\n",
     "community_lst = ['Hoonah', 'Skagway', 'Klukwan', 'Yakutat', 'Craig', 'Kasaan']\n",
     "\n",
-    "# open precipitation data\n",
-    "fname = path_to_out + 'SEAK_precip_max_{0}_{1}.csv'.format(option, temporal_res)\n",
-    "prec_df = pd.read_csv(fname)\n",
-    "prec_df = prec_df.replace(0, np.NaN) # replace any instance of zero with nan to ignore dates with no precipitation\n",
-    "\n",
-    "# open IVT data\n",
-    "df_lst = []\n",
-    "for i, community in enumerate(community_lst):\n",
-    "    fname = path_to_out + 'IVT_ERA5_{0}.csv'.format(community)\n",
-    "    ivt_df = pd.read_csv(fname)\n",
-    "    \n",
-    "    ## calculate IVT direction\n",
-    "    uvec = units.Quantity(ivt_df['uIVT'].values, \"m/s\")\n",
-    "    vvec = units.Quantity(ivt_df['vIVT'].values, \"m/s\")\n",
-    "    ivtdir = mpcalc.wind_direction(uvec, vvec)\n",
-    "    ivt_df['ivtdir'] = ivtdir\n",
-    "    ivt_df = ivt_df.drop(['Unnamed: 0'], axis=1) # drop unnecessary vars\n",
-    "    \n",
-    "    if temporal_res == 'hourly':\n",
-    "        ivt_df = ivt_df\n",
-    "    elif temporal_res == 'daily':\n",
-    "        ivt_df.index = ivt_df['time']\n",
-    "        ivt_df = ivt_df.set_index(pd.to_datetime(ivt_df['time'])) # reset the index as \"date\" \n",
-    "        ivt_df = ivt_df.resample('1D').mean(numeric_only=True)\n",
-    "        ivt_df = ivt_df.reset_index() # remove the index\n",
-    "    \n",
-    "    ## append AR data\n",
-    "    fname = path_to_out + 'SEAK_ardates_{0}.csv'.format(temporal_res)\n",
-    "    ar_df = pd.read_csv(fname) # read in AR dates\n",
-    "\n",
-    "    # append AR dates to current df\n",
-    "    ivt_df['AR'] = ar_df.AR\n",
-    "    \n",
-    "    ## append impact data\n",
-    "    fname = path_to_out + 'SEAK_impactdates_{0}.csv'.format(temporal_res)\n",
-    "    impact_df = pd.read_csv(fname) # read in impact dates\n",
-    "    # append impact dates to current df\n",
-    "    ivt_df['impact'] = impact_df.IMPACT\n",
-    "    \n",
-    "    # ## append community precipitation data\n",
-    "    ivt_df['prec'] = prec_df[community]\n",
-    "    \n",
-    "    # reset the index as \"time\"\n",
-    "    ivt_df = ivt_df.set_index(pd.to_datetime(ivt_df['time']))\n",
-    "    \n",
-    "    ## select the 00, 06, 12, and 18 hour timesteps\n",
-    "    idx = (ivt_df.index.hour == 0) | (ivt_df.index.hour == 6) | (ivt_df.index.hour == 12) | (ivt_df.index.hour == 18)\n",
-    "    ivt_df = ivt_df.loc[idx]\n",
-    "    \n",
-    "    df_lst.append(ivt_df)\n",
-    "    \n",
-    "df_lst[0]\n"
+    "df_lst = combine_ivt_ar_prec_df(option, temporal_res, community_lst) # combine dfs into list of dfs\n",
+    "df_lst[0]"
    ]
   },
   {
