--- a/analysis/AR-scale_compute.ipynb
+++ b/analysis/AR-scale_compute.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c2732801-a476-441e-b1c0-154215247540",
    "metadata": {},
    "outputs": [
@@ -68,6 +68,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "106230\n",
+      "12593\n",
       "        time     IVT     lat     lon    uIVT    vIVT     IWV  ivtdir      AR  \\\n",
       "rank                                                                           \n",
       "0.00  338047  338047  338047  338047  338047  338047  338047  338047  338047   \n",
@@ -83,6 +85,8 @@
       "2.00    4121   1424    4121      4121    4121  \n",
       "3.00    2011    485    2011      2011    2011  \n",
       "4.00     518    110     518       518     518  \n",
+      "106230\n",
+      "2895\n",
       "        time     IVT     lat     lon    uIVT    vIVT     IWV  ivtdir      AR  \\\n",
       "rank                                                                           \n",
       "0.00  347745  347745  347745  347745  347745  347745  347745  347745  347745   \n",
@@ -96,6 +100,8 @@
       "1.00    1869    390    1869      1869    1869  \n",
       "2.00     907    155     907       907     907  \n",
       "3.00     119     33     119       119     119  \n",
+      "106230\n",
+      "2487\n",
       "        time     IVT     lat     lon    uIVT    vIVT     IWV  ivtdir      AR  \\\n",
       "rank                                                                           \n",
       "0.00  348153  348153  348153  348153  348153  348153  348153  348153  348153   \n",
@@ -109,6 +115,8 @@
       "1.00    1777    454    1777      1777    1777  \n",
       "2.00     639    111     639       639     639  \n",
       "3.00      71     12      71        71      71  \n",
+      "106230\n",
+      "10013\n",
       "        time     IVT     lat     lon    uIVT    vIVT     IWV  ivtdir      AR  \\\n",
       "rank                                                                           \n",
       "0.00  340627  340627  340627  340627  340627  340627  340627  340627  340627   \n",
@@ -126,6 +134,8 @@
       "3.00    1646    411    1646      1646    1646  \n",
       "4.00     381    143     381       381     381  \n",
       "5.00      82      9      82        82      82  \n",
+      "106230\n",
+      "26135\n",
       "        time     IVT     lat     lon    uIVT    vIVT     IWV  ivtdir      AR  \\\n",
       "rank                                                                           \n",
       "0.00  324505  324505  324505  324505  324505  324505  324505  324505  324505   \n",
@@ -143,6 +153,8 @@
       "3.00    4741   1304    4741      4741    4741  \n",
       "4.00    2037    654    2037      2037    2037  \n",
       "5.00     225    112     225       225     225  \n",
+      "106230\n",
+      "23304\n",
       "        time     IVT     lat     lon    uIVT    vIVT     IWV  ivtdir      AR  \\\n",
       "rank                                                                           \n",
       "0.00  327336  327336  327336  327336  327336  327336  327336  327336  327336   \n",
@@ -160,8 +172,8 @@
       "3.00    4349   1008    4349      4349    4349  \n",
       "4.00    1401    539    1401      1401    1401  \n",
       "5.00     108     49     108       108     108  \n",
-      "CPU times: user 10.5 s, sys: 316 ms, total: 10.9 s\n",
-      "Wall time: 10.7 s\n"
+      "CPU times: user 11.1 s, sys: 400 ms, total: 11.5 s\n",
+      "Wall time: 11.4 s\n"
      ]
     }
    ],
@@ -169,7 +181,7 @@
     "%%time\n",
     "df_lst_new = []\n",
     "for i, df in enumerate(df_lst):\n",
-    "\n",
+    "    print(len(df.loc[df.AR == 1]))\n",
     "    # create a column called 'AR_tmp' with a \"1\" if IVT > 250 kg m-1 s-1\n",
     "    df['AR_tmp'] = 0\n",
     "    df.loc[df['IVT']>=250., 'AR_tmp'] = 1\n",
@@ -192,6 +204,7 @@
     "    ## join AR rank with original df\n",
     "\n",
     "    df = df.join(tmp['rank'], on='new_ID')\n",
+    "    print(len(df.loc[df['rank'] > 0]))\n",
     "    print(df.groupby('rank').count())\n",
     "    df_lst_new.append(df)\n"
    ]
