update ivt composites to include lower 5th percentile and upper 95th percentile

--- a/preprocess/ivt_composites_preprocess.ipynb
+++ b/preprocess/ivt_composites_preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "6f2cf06f-9d1b-4812-b23c-1b131a10d6f1",
    "metadata": {},
    "outputs": [],
@@ -42,13 +42,14 @@
     "sys.path.append('../modules')\n",
     "import nclcmaps as nclc\n",
     "from plotter import draw_basemap\n",
+    "from preprocess_dataframes import combine_ivt_ar_prec_df\n",
     "\n",
     "pd.options.display.float_format = \"{:,.2f}\".format # makes it so pandas tables display only first two decimals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "0a5bba13-91e8-40c1-9a1e-7f68b4586fb4",
    "metadata": {},
    "outputs": [],
@@ -63,324 +64,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "c3a3c2e1-a996-4461-9d74-8178cdcd055e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>IVT</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>uIVT</th>\n",
-       "      <th>vIVT</th>\n",
-       "      <th>IWV</th>\n",
-       "      <th>ivtdir</th>\n",
-       "      <th>AR</th>\n",
-       "      <th>impact</th>\n",
-       "      <th>prec</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1980-01-01</th>\n",
-       "      <td>1980-01-01</td>\n",
-       "      <td>77.66</td>\n",
-       "      <td>58.00</td>\n",
-       "      <td>-135.50</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>75.10</td>\n",
-       "      <td>10.93</td>\n",
-       "      <td>184.72</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-01-02</th>\n",
-       "      <td>1980-01-02</td>\n",
-       "      <td>100.72</td>\n",
-       "      <td>58.00</td>\n",
-       "      <td>-135.50</td>\n",
-       "      <td>-28.84</td>\n",
-       "      <td>93.67</td>\n",
-       "      <td>11.23</td>\n",
-       "      <td>161.07</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29.41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-01-03</th>\n",
-       "      <td>1980-01-03</td>\n",
-       "      <td>62.80</td>\n",
-       "      <td>58.00</td>\n",
-       "      <td>-135.50</td>\n",
-       "      <td>6.30</td>\n",
-       "      <td>59.67</td>\n",
-       "      <td>9.13</td>\n",
-       "      <td>193.02</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-01-04</th>\n",
-       "      <td>1980-01-04</td>\n",
-       "      <td>19.53</td>\n",
-       "      <td>58.00</td>\n",
-       "      <td>-135.50</td>\n",
-       "      <td>5.74</td>\n",
-       "      <td>-16.81</td>\n",
-       "      <td>3.08</td>\n",
-       "      <td>337.15</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-01-05</th>\n",
-       "      <td>1980-01-05</td>\n",
-       "      <td>102.21</td>\n",
-       "      <td>58.00</td>\n",
-       "      <td>-135.50</td>\n",
-       "      <td>70.40</td>\n",
-       "      <td>-67.56</td>\n",
-       "      <td>5.18</td>\n",
-       "      <td>323.07</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-27</th>\n",
-       "      <td>2019-12-27</td>\n",
-       "      <td>91.43</td>\n",
-       "      <td>58.00</td>\n",
-       "      <td>-135.50</td>\n",
-       "      <td>61.35</td>\n",
-       "      <td>65.65</td>\n",
-       "      <td>7.73</td>\n",
-       "      <td>225.77</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-28</th>\n",
-       "      <td>2019-12-28</td>\n",
-       "      <td>221.96</td>\n",
-       "      <td>58.00</td>\n",
-       "      <td>-135.50</td>\n",
-       "      <td>39.06</td>\n",
-       "      <td>209.42</td>\n",
-       "      <td>12.02</td>\n",
-       "      <td>199.91</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-29</th>\n",
-       "      <td>2019-12-29</td>\n",
-       "      <td>89.09</td>\n",
-       "      <td>58.00</td>\n",
-       "      <td>-135.50</td>\n",
-       "      <td>13.36</td>\n",
-       "      <td>85.46</td>\n",
-       "      <td>9.03</td>\n",
-       "      <td>188.47</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-30</th>\n",
-       "      <td>2019-12-30</td>\n",
-       "      <td>187.44</td>\n",
-       "      <td>58.00</td>\n",
-       "      <td>-135.50</td>\n",
-       "      <td>57.85</td>\n",
-       "      <td>176.43</td>\n",
-       "      <td>13.59</td>\n",
-       "      <td>198.31</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>44.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-31</th>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>107.97</td>\n",
-       "      <td>58.00</td>\n",
-       "      <td>-135.50</td>\n",
-       "      <td>76.44</td>\n",
-       "      <td>73.70</td>\n",
-       "      <td>12.71</td>\n",
-       "      <td>222.88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10.94</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>14610 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 time    IVT   lat     lon   uIVT   vIVT   IWV  ivtdir  AR  \\\n",
-       "time                                                                         \n",
-       "1980-01-01 1980-01-01  77.66 58.00 -135.50   0.49  75.10 10.93  184.72   0   \n",
-       "1980-01-02 1980-01-02 100.72 58.00 -135.50 -28.84  93.67 11.23  161.07   0   \n",
-       "1980-01-03 1980-01-03  62.80 58.00 -135.50   6.30  59.67  9.13  193.02   0   \n",
-       "1980-01-04 1980-01-04  19.53 58.00 -135.50   5.74 -16.81  3.08  337.15   0   \n",
-       "1980-01-05 1980-01-05 102.21 58.00 -135.50  70.40 -67.56  5.18  323.07   1   \n",
-       "...               ...    ...   ...     ...    ...    ...   ...     ...  ..   \n",
-       "2019-12-27 2019-12-27  91.43 58.00 -135.50  61.35  65.65  7.73  225.77   0   \n",
-       "2019-12-28 2019-12-28 221.96 58.00 -135.50  39.06 209.42 12.02  199.91   0   \n",
-       "2019-12-29 2019-12-29  89.09 58.00 -135.50  13.36  85.46  9.03  188.47   0   \n",
-       "2019-12-30 2019-12-30 187.44 58.00 -135.50  57.85 176.43 13.59  198.31   0   \n",
-       "2019-12-31 2019-12-31 107.97 58.00 -135.50  76.44  73.70 12.71  222.88   0   \n",
-       "\n",
-       "            impact  prec  \n",
-       "time                      \n",
-       "1980-01-01       0  7.66  \n",
-       "1980-01-02       0 29.41  \n",
-       "1980-01-03       0  7.75  \n",
-       "1980-01-04       0  0.08  \n",
-       "1980-01-05       0   NaN  \n",
-       "...            ...   ...  \n",
-       "2019-12-27       1  2.88  \n",
-       "2019-12-28       0 40.27  \n",
-       "2019-12-29       0  7.27  \n",
-       "2019-12-30       0 44.45  \n",
-       "2019-12-31       0 10.94  \n",
-       "\n",
-       "[14610 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## open precipitation and ivt dfs\n",
     "## append precip to each community IVT df\n",
     "option = 'a'\n",
     "temporal_res = 'daily'\n",
     "community_lst = ['Hoonah', 'Skagway', 'Klukwan', 'Yakutat', 'Craig', 'Kasaan']\n",
+    "lag_lst = [0]\n",
     "\n",
-    "# open precipitation data\n",
-    "fname = path_to_out + 'SEAK_precip_max_{0}_{1}.csv'.format(option, temporal_res)\n",
-    "prec_df = pd.read_csv(fname)\n",
-    "prec_df = prec_df.replace(0, np.NaN) # replace any instance of zero with nan to ignore dates with no precipitation\n",
-    "\n",
-    "# open IVT data\n",
-    "df_lst = []\n",
-    "for i, community in enumerate(community_lst):\n",
-    "    fname = path_to_out + 'IVT_ERA5_{0}.csv'.format(community)\n",
-    "    ivt_df = pd.read_csv(fname)\n",
-    "    \n",
-    "    ## calculate IVT direction\n",
-    "    uvec = units.Quantity(ivt_df['uIVT'].values, \"m/s\")\n",
-    "    vvec = units.Quantity(ivt_df['vIVT'].values, \"m/s\")\n",
-    "    ivtdir = mpcalc.wind_direction(uvec, vvec)\n",
-    "    ivt_df['ivtdir'] = ivtdir\n",
-    "    ivt_df = ivt_df.drop(['Unnamed: 0'], axis=1) # drop unnecessary vars\n",
-    "    \n",
-    "    if temporal_res == 'hourly':\n",
-    "        ivt_df = ivt_df\n",
-    "    elif temporal_res == 'daily':\n",
-    "        ivt_df.index = ivt_df['time']\n",
-    "        ivt_df = ivt_df.set_index(pd.to_datetime(ivt_df['time'])) # reset the index as \"date\" \n",
-    "        ivt_df = ivt_df.resample('1D').mean(numeric_only=True)\n",
-    "        ivt_df = ivt_df.reset_index() # remove the index\n",
-    "    \n",
-    "    ## append AR data\n",
-    "    fname = path_to_out + 'SEAK_ardates_{0}.csv'.format(temporal_res)\n",
-    "    ar_df = pd.read_csv(fname) # read in AR dates\n",
-    "\n",
-    "    # append AR dates to current df\n",
-    "    ivt_df['AR'] = ar_df.AR\n",
-    "    \n",
-    "    ## append impact data\n",
-    "    fname = path_to_out + 'SEAK_impactdates_{0}.csv'.format(temporal_res)\n",
-    "    impact_df = pd.read_csv(fname) # read in impact dates\n",
-    "    # append impact dates to current df\n",
-    "    ivt_df['impact'] = impact_df.IMPACT\n",
-    "    \n",
-    "    # ## append community precipitation data\n",
-    "    ivt_df['prec'] = prec_df[community]\n",
-    "    \n",
-    "    # reset the index as \"time\"\n",
-    "    ivt_df = ivt_df.set_index(pd.to_datetime(ivt_df['time']))\n",
-    "    \n",
-    "    ## select the 00, 06, 12, and 18 hour timesteps\n",
-    "    idx = (ivt_df.index.hour == 0) | (ivt_df.index.hour == 6) | (ivt_df.index.hour == 12) | (ivt_df.index.hour == 18)\n",
-    "    ivt_df = ivt_df.loc[idx]\n",
-    "    \n",
-    "    df_lst.append(ivt_df)\n",
-    "    \n",
-    "df_lst[0]\n"
+    "df_lst = combine_ivt_ar_prec_df(option, temporal_res, community_lst) # combine dfs into list of dfs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "efa7bbf4-ae4e-4dc8-9ae0-f806fb894f8e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## get list of dates that are Extreme Precip and AR for each community\n",
+    "## get list of dates that are:\n",
+    "### (middle) top 95th percentile precip (ALL IVT)\n",
+    "\n",
     "ardate_lst = []\n",
     "for i, df in enumerate(df_lst):\n",
     "    prec_thres = df['prec'].describe(percentiles=[.95]).loc['95%'] # 95th percentile precipitation threshold\n",
@@ -389,7 +97,107 @@
     "    tmp = df.loc[idx]\n",
     "    \n",
     "    ar_dates = tmp.time.values\n",
-    "    ardate_lst.append(tmp.time.values)"
+    "    ardate_lst.append(tmp.time.values)\n",
+    "    \n",
+    "## merge ardate_lst into single list and remove duplicates\n",
+    "tmp = np.concatenate(ardate_lst, axis=0)\n",
+    "new_data = np.unique(tmp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "66b3468b-c9fc-40b9-a634-945cccb44264",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1290\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(new_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ceed26e9-fc57-4316-87da-32e16ab435dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56\n"
+     ]
+    }
+   ],
+   "source": [
+    "## get list of dates that are:\n",
+    "### (left) top 5th percentile IVT, bottom 5th percentile of precip\n",
+    "\n",
+    "ardate_lst = []\n",
+    "for i, df in enumerate(df_lst):\n",
+    "    prec_thres = df['prec'].describe(percentiles=[.05]).loc['5%'] # 5th percentile precipitation threshold\n",
+    "    ivt_thres = df['IVT'].describe(percentiles=[.95]).loc['95%'] # 95th percentile IVT threshold\n",
+    "    idx = (df.AR == 1) & (df.prec < prec_thres) & (df.IVT > ivt_thres) & (df.index != '2008-02-29 00:00:00') # hack to get rid of the leap day (not in WRF data)\n",
+    "    tmp = df.loc[idx]\n",
+    "    \n",
+    "    ar_dates = tmp.time.values\n",
+    "    ardate_lst.append(tmp.time.values)\n",
+    "    \n",
+    "## merge ardate_lst into single list and remove duplicates\n",
+    "tmp = np.concatenate(ardate_lst, axis=0)\n",
+    "new_data2 = np.unique(tmp)\n",
+    "print(len(new_data2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "24970ffa-0676-4d15-9c99-06fdd4a32dd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "563\n"
+     ]
+    }
+   ],
+   "source": [
+    "## get list of dates that are:\n",
+    "### (right) top 95th percentile IVT, top 95th percentile precip\n",
+    "\n",
+    "ardate_lst = []\n",
+    "for i, df in enumerate(df_lst):\n",
+    "    prec_thres = df['prec'].describe(percentiles=[.95]).loc['95%'] # 95th percentile precipitation threshold\n",
+    "    ivt_thres = df['IVT'].describe(percentiles=[.95]).loc['95%'] # 95th percentile IVT threshold\n",
+    "    idx = (df.AR == 1) & (df.prec > prec_thres) & (df.IVT > ivt_thres) & (df.index != '2008-02-29 00:00:00') # hack to get rid of the leap day (not in WRF data)\n",
+    "    tmp = df.loc[idx]\n",
+    "    \n",
+    "    ar_dates = tmp.time.values\n",
+    "    ardate_lst.append(tmp.time.values)\n",
+    "    \n",
+    "## merge ardate_lst into single list and remove duplicates\n",
+    "tmp = np.concatenate(ardate_lst, axis=0)\n",
+    "new_data3 = np.unique(tmp)\n",
+    "print(len(new_data3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f4c82a28-f3c9-4ad9-8507-5b9415498760",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ardate_lst = [new_data, new_data2, new_data3]"
    ]
   },
   {
@@ -983,9 +791,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (SEAK-clim)",
+   "display_name": "Python [conda env:SEAK-clim]",
    "language": "python",
-   "name": "seak-clim"
+   "name": "conda-env-SEAK-clim-py"
   },
   "language_info": {
    "codemirror_mode": {
