add USGS 7.5 arcsec elevation data to topo maps

--- a/analysis/precip_composites.ipynb
+++ b/analysis/precip_composites.ipynb
@@ -36,6 +36,7 @@
     "import metpy.calc as mpcalc\n",
     "from metpy.units import units\n",
     "import earthpy.spatial as es\n",
+    "import rasterio\n",
     "\n",
     "# import personal modules\n",
     "sys.path.append('../modules') # Path to modules\n",
