clean up preprocess scripts and add README, add elevation shading underneath precipitation composites

--- a/analysis/precipitation_histograms.ipynb
+++ b/analysis/precipitation_histograms.ipynb
@@ -812,6 +812,15 @@
     "                    order=community_lst,\n",
     "                    meanline=True, showmeans=True, meanprops={'c':'white', 'lw':1})\n",
     "    \n",
+    "    bplot = ax.boxplot(ds.values, vert=False, widths=15.0, positions=ds.z.values,\n",
+    "                       patch_artist=True,  # fill with color\n",
+    "                       notch=True, showcaps=True,\n",
+    "                       flierprops={\"marker\": \"x\"},\n",
+    "                       medianprops={\"color\": \"k\"},\n",
+    "                       # meanline=True, showmeans=True,\n",
+    "                       # meanprops={'c':'blue', 'lw':1},\n",
+    "                       whis=[1, 99])\n",
+    "    \n",
     "    \n",
     "    sns.set_style(\"ticks\")\n",
     "    if i == 0:\n",
